<resources>
    <string name="app_name">GM Roll</string>
    <string name="button_send">Save</string>

    <string name="label_head">head</string>
    <string name="label_neck">neck</string>
    <string name="label_arm_left">left arm</string>
    <string name="label_arm_right">right arm</string>
    <string name="label_hand_left">left hand</string>
    <string name="label_hand_right">right hand</string>
    <string name="label_torso">torso</string>
    <string name="label_stomach">stomach</string>
    <string name="label_thigh_left">left thigh</string>
    <string name="label_thigh_right">right thigh</string>
    <string name="label_foot_left">left foot</string>
    <string name="label_foot_right">right foot</string>
    <string name="label_title">title</string>
    <string name="default_decimal_hint" translatable="false">0</string>

    <string name="button_roll">Roll</string>
    <string name="swipe_settings_tooltip">Swipe left to view settings</string>
    <string name="swipe_history_tooltip">Swipe right to view roll history</string>
    <string name="top_label_history">History of previous rolls</string>
    <string name="button_youtube">Get Rolls</string>

    <string name="add_userTheme">Add new Theme</string>
    <string name="hint_userTheme">Title&#8230;</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Theme not saved because of no title.</string>
    <string name="zero_not_saved">Sum of theme\'s chances has to be bigger than zero</string>
    <string name="userTheme_update">Theme updated successfully</string>
    <string name="userTheme_create">Theme created successfully</string>
    <string name="userTheme_maxValExceeded">Max value equals 1000. One of your field exceeds max value.</string>
    <string name="default_not_deleted">You cannot delete default theme.</string>
    <string name="duplicate_title">Theme with given name already exists.</string>
    <string name="default_not_edited">You cannot edit default theme.</string>

    <string name="theme_light" translatable="false">Light</string>
    <string name="theme_dark" translatable="false">Dark</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>